# esp32s3-projects

i2c-led16x2-pcf8574t/: main.c
i2c-lсd16x2-pcf8574t/: CMakeLists.txt  README.MD  i2c_lcd.c  i2c_lcd.h
ota-wifi-led-pwm-blink/: .gitignore  CMakeLists.txt  ota_state.json  partitions.csv  sdkconfig.old  server.py
ota-wifi-led-pwm-blink/main/: CMakeLists.txt  app_config.h  idf_component.yml  leds.c  leds.h  main.c  ota.c  ota.h  wifi.c  wifi.h
